Japanese support fix2
sorry

--- a/romfs/lang/jp.json
+++ b/romfs/lang/jp.json
@@ -145,7 +145,7 @@
             "ignore_firm": "タイトルに必要な最小ファームウェアバージョンを無視する",
             "nca_verify": "インストール前にNCA署名を検証する",
             "boost_mode": "インストール中に「ブーストモード」を有効にする",
-            "ask_delete": "インストール後に元のファイルを削除する",,
+            "ask_delete": "インストール後に元のファイルを削除する",
             "auto_update": "Tinleafのアップデートを自動的に確認する",
             "sig_url": "署名パッチのソースURL: ",
             "language": "言語: ",
