--- a/romfs/lang/ru.json
+++ b/romfs/lang/ru.json
@@ -4,10 +4,15 @@
             "sd": "Установка из SD-карты",
             "net": "Установка по сети",
             "usb": "Установка через USB",
+			"hdd": "Install over USB HDD",
             "sig": "Управление sig-patches",
             "set": "Настройки",
             "exit": "Выход"
         },
+		"hdd": {
+			"title": "USB HDD",
+			"notfound": "USB HDD is not connected."
+		},
         "net": {
             "title": "Сетевое подключение недоступно",
             "desc": "Удостоверьтесь что авиарежим отключён и вы подключены к локальной сети."
