--- a/romfs/lang/ru.json
+++ b/romfs/lang/ru.json
@@ -4,15 +4,15 @@
             "sd": "Установка из SD-карты",
             "net": "Установка по сети",
             "usb": "Установка через USB",
-			"hdd": "Install over USB HDD",
+            "hdd": "Install over USB HDD",
             "sig": "Управление sig-patches",
             "set": "Настройки",
             "exit": "Выход"
         },
-		"hdd": {
-			"title": "USB HDD",
-			"notfound": "USB HDD is not connected."
-		},
+        "hdd": {
+            "title": "USB HDD",
+            "notfound": "USB HDD is not connected."
+        },
         "net": {
             "title": "Сетевое подключение недоступно",
             "desc": "Удостоверьтесь что авиарежим отключён и вы подключены к локальной сети."
@@ -74,6 +74,9 @@
             "delete_info_multi": " файлы успешно установлены! Удалить их из SD-карты?",
             "delete_desc": "После того, как файлы установлены, они больше не требуются.",
             "buttons": "\ue0e0 Выбрать файл   \ue0e3 Выбрать всё   \ue0ef Установить файл(ы)   \ue0e2 Помощь   \ue0e1 Отмена "
+        },
+        "hdd": {
+            "source_string": " from USB HDD"
         },
         "usb": {
             "help": {
