--- a/romfs/lang/kr.json
+++ b/romfs/lang/kr.json
@@ -107,7 +107,7 @@
             "desc0": " 파일이 성공적으로 설치되었습니다!",
             "desc1": " 설치되었습니다!",
             "downloading": "다운로드 주 ",
-            "at": " at "
+            "at": " 에 "
         },
         "nca_verify": {
             "title": "잘못된 NCA 서명이 감지되었습니다!",
@@ -173,7 +173,7 @@
             "opt0": "업데이트",
             "top_info": "틴리프 설치 프로그램으로 업데이트 중 ",
             "bot_info": "틴리프 설치 프로그램 다운로드 중 ",
-            "bot_info2": 틴리프 설치 프로그램 추출 중 ",
+            "bot_info2": "틴리프 설치 프로그램 추출 중 ",
             "complete": "업데이트 완료되었습니다!",
             "failed": "업데이트 실패하였습니다!",
             "end_desc": "이제 소프트웨어가 닫힙니다.",
